# Autonomous-Exploration-and-mapping-using-landmark-based-EKF-SLAM

./: .gitignore  CITATION_MAPPING.md  CONVEX_HULL_IMPLEMENTATION_REPORT.md  DEBUGGING_ENHANCEMENTS.md  EKF_COVARIANCE_COLLAPSE_FIX.md  EKF_DEBUG_LOGGING.md  EKF_Documentation.md  EKF_GROUNDTRUTH_COMPARISON.md  EKF_MEASUREMENT_TRUST_FIX.md  EKF_NOISE_PARAMETER_FIX.md  FRONTIER_DETECTION_MODULE_REPORT.md  GAZEBO_SENSOR_ARCHITECTURE.md  ICP_FEEDBACK_LOOP_FIX.md  ICP_Submap_Stitching_Report.md  IMU_200HZ_UPDATE.md  IMU_NOT_PUBLISHING_FIX.md  IMU_PREDICTION_LOGGING.md  MAPPING_MODULE_TECHNICAL_REPORT.md  MULTI_ROBOT_FRAME_SETUP.md  NAMING_SYSTEM_DOCUMENTATION.md  NAVIGATION_CODE_CLEANUP_SUMMARY.md  NODE_NAMING_DOCUMENTATION.md  ODOMETRY_DATA_FLOW.md  ODOMETRY_ERROR_ANALYSIS.md  ODOMETRY_EXPLAINED.md  QUICK_START.md  README.md  ROTATE_IN_PLACE_PATTERN.md  ROTATION_AWARE_SUBMAP_CREATION.md  SUBMAP_SYSTEM_OVERVIEW.md  TESTING_GUIDE.md  TF2_LIDAR_OFFSET_FIX.md  TF_FLOW_DIAGRAM.txt  TOPIC_DIAGNOSTIC_REPORT.md  TRANSFORMATION_ISSUES_ANALYSIS.md  VISUALIZATION_GUIDE.md  WORLD_FRAME_FIX.md  check_map_quality.py  convert_to_latex.sh  convert_with_template.sh  (+24 more)
docs/: 00_system_overview.md  01_SYSTEM_OVERVIEW.md  01_ekf_slam_theory.md  02_SLAM_MAPPING.md  02_landmark_features.md  03_EKF_SENSOR_FUSION.md  03_data_association.md  04_LOOP_CLOSURE_OPTIMIZATION.md  04_icp_alignment.md  05_NAVIGATION_MODULE.md  05_submap_management.md  06_ROS2_INTEGRATION.md  06_uncertainty_quantification.md  07_TURTLEBOT3_GAZEBO_PLATFORM.md  07_coordinate_frames.md  EKF_COMPLETE.md  README_SLAM_DOCS.md  THESIS_ABSTRACT.md  data_association.md  detailed_ekf_update_derivations.md  icp_hessian_covariance_report.md  introduction_literature_review.md  literature_review.md  mapping_module.md  mapping_module_flowchart.tex  methodology_feature_mapping.md  methodology_icp_mapping.md  slam_equations_quick_reference.md  slam_intuitive_guide.md  statistical_slam_mathematics.md  uncertainty_covariance_report.md
imu_logs/: imu_predictions_tb3_1.csv
src/: data_analysis.ipynb
src/autonomous_exploration/: package.xml  setup.py
src/autonomous_exploration/autonomous_exploration/: qos_profiles.py
src/autonomous_exploration/config/: tb3_bridge.yaml
src/autonomous_exploration/launch/: full_system.launch.py  visualize_robot.launch.py  (+1 more)
src/map_generation/: CHANGES_SUMMARY.md  GPU_SETUP.md  MAPPING_FUNCTIONS_AND_PARAMETERS.md  package.xml  setup.cfg  setup.py  verify_gpu.py
src/multi_robot_coordination/: CMakeLists.txt  README.md  package.xml  setup.cfg
src/multi_robot_coordination/msg/: EnvironmentBounds.msg  FrameUpdate.msg  RobotInfo.msg
src/multi_robot_coordination/multi_robot_coordination/: __init__.py  communication_manager.py  coordination_utils.py  frame_manager.py  inter_robot_icp.py  robot_coordinator.py
src/multi_robot_coordination/srv/: RequestAlignment.srv
src/multi_robot_mapping/: package.xml  setup.py
src/multi_robot_mapping/config/: tb3_bridge.yaml
src/multi_robot_mapping/launch/: full_system.launch.py  test_mapping.launch.py  visualize_global_map.launch.py  visualize_robot.launch.py
src/multi_robot_mapping/models/turtlebot3_waffle_pi/: model.sdf
src/multi_robot_mapping/multi_robot_mapping/: qos_profiles.py
src/multi_robot_mapping/rviz/: global_map_only.rviz  mapping_visualization.rviz  tb3_1_visualization.rviz  tb3_2_visualization.rviz
src/multi_robot_mapping/worlds/: maze.sdf
src/navigation/: package.xml  setup.py
src/navigation/navigation/: __init__.py  convex_frontier_detector.py  frontier_detector.py  frontier_explorer.py  navigation_node.py  navigation_utils.py  point_cloud_collision_checker.py  pure_pursuit_controller.py  rrt_star.py  rrt_star_planner.py  simple_controller.py  simple_frontiers.py  simple_navigation.py  simple_rrt.py  simple_straight_motion.py  smoothed_pure_pursuit.py  test_straight_line.py
submaps/tb3_1/: ekf_covariance.csv  ekf_stats.csv  ekf_vs_groundtruth.csv  global_map.pcd  ground_truth_comparison.csv  ground_truth_comparison_final.csv  ground_truth_comparison_lidar.csv  ground_truth_comparison_odom.csv  submap_confidence.csv  submap_confidence_final.csv  submap_confidence_lidar.csv  submap_confidence_odom.csv
submaps/tb3_2/: global_map.pcd
test_results/tb3_1/: long_corridor_trajectory.txt
thesis literature/: 2007.11898v2.pdf:Zone.Identifier  A_method_for_registration_of_3-D_shapes.pdf:Zone.Identifier  An_accurate_closed-form_estimate_of_ICPs_covariance.pdf:Zone.Identifier  FULLTEXT01.pdf:Zone.Identifier  Past, Present, and Future of Simultaneous localisation and mapping Towards the Robust-perception Age.pdf:Zone.Identifier
(+44 files in other folders)
