<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>Frontier-based exploration with RRT* path planning for point cloud maps</description>
  <maintainer email="piyushbhansali8@gmail.com">piyush</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Package dependencies -->
  <depend>map_generation</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
